feat(generator): 实现数据驱动的风格配置文件系统
- 在AI规划器中添加风格配置文件库提示，支持模型选择特定建筑风格
- 提供风格配置文件候选列表供模型确定性选择
- 更新城堡、明清华院、长城、房屋、办公区等生成器使用风格配置文件解析
- 实现基于规则的生成器选择器，支持地标和建筑类型自动匹配
- 添加骨架道路解析功能，将CIRCULATION节点转换为实际道路
- 优化网络通信中的地形摘要发送逻辑
- 使用新的CatalogStyleProfile适配器替代传统基因系统
- 实现骨架预览状态的switch表达式重构